[package]
name = "swtchr"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.2.0"
color-eyre = "0.6.2"
eyre = "0.6.12"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
gtk4-layer-shell = "0.2.0"
serde = { version = "1.0.197", features = ["derive"] }
signal-hook = "0.3.17"
swayipc = "3.0.2"

[[bin]]
name = "swtchrd"
path = "./src/daemon/main.rs"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
