[package]
name = "swtchr"
version = "0.1.2"
edition = "2021"
authors = ["Wren Powell <wrenp@duck.com>"]
description = "A Gnome-style window switcher for the Sway window manager"
categories = ["command-line-utilities"]
keywords = ["sway", "swaywm", "wayland"]
homepage = "https://github.com/lostatc/swtchr"
repository = "https://github.com/lostatc/swtchr"
readme = "README.md"
license = "MIT"

[dependencies]
async-channel = "2.2.0"
color-eyre = "0.6.2"
eyre = "0.6.12"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_6"] }
gtk4-layer-shell = "0.2.0"
serde = { version = "1.0.197", features = ["derive"] }
swayipc = "3.0.2"
clap = { version = "4.5.2", features = ["derive"] }
nix = { version = "0.28.0", features = ["user"] }
toml = { version = "0.8.11", default-features = false, features = ["parse"] }

[[bin]]
name = "swtchr"
path = "./src/client/main.rs"

[[bin]]
name = "swtchrd"
path = "./src/daemon/main.rs"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
